--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- starting of About section -->
     <div id="About"><h1 class="About-name observed ">About</h1></div>
     <div class="row featurette observed " style="width: 100%; height: 500px">
-      <div class="col-md-6 observed">
+      <div class="col-md-6 observed" style="display: flex;">
         <div class="about__content observed">
           <div class="profile profile__fade-in">
             <div class="profile__picture">
@@ -127,7 +127,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 observed">
+      <div class="col-md-6 observed" style="display: flex;">
         <div class="skills observed">
           <div class="skills__row">
             <div class="skills__item skills__item--html skills__item-fade-in">
